Bug#35669: report syntax errors in the proxy-lua-script on log level 'critical'